[package]
name = "meteora-bot"
version = "0.2.1"
edition = "2021"

[dependencies]
solana-sdk = "2.0.10"
solana-transaction-status = "2.0.10"
solana-client = "2.0.10"
yellowstone-grpc-client = { version = "2.0.0", git = "https://github.com/rpcpool/yellowstone-grpc.git" }
yellowstone-grpc-proto = { version = "2.0.0", git = "https://github.com/rpcpool/yellowstone-grpc.git" }
tokio = { version = "1.40.0", features = ["full"] }
async-trait = "0.1.83"
log = "0.4.22"
env_logger = "0.11.5"
dotenv = "0.15.0"
spl-associated-token-account = "5.0.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
tokio-util = "0.7.12"
anyhow = "1.0.93"
reqwest = "0.11.27"
serde_json = "1.0.132"
bincode = "1.3.3"
base64 = "0.12.3"
futures = "0.3.31"
thiserror = { version = "1.0.69", features = [] }
borsh = "1.5.1"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
